test/features/errors/codegen/e2007_failed_to_cast.spl
# E2007: Failed to Cast

Feature: E2007 - Failed to Cast Between Types
  As a Simple compiler
  I want to detect failed type casts during codegen
  So that incompatible casts are reported

  Background:
    Given I have the Simple compiler

  Scenario: Incompatible type cast
    When I compile with codegen:
      '''
      fn test():
        val x: ComplexType = get_value()
        val y = x as IncompatibleType  # Error: cannot cast
      '''
    Then I should see error E2007
    And the error message should be "failed to cast from `{from_type}` to `{to_type}`"
    And the label should indicate "invalid cast"
    And the help should suggest "check if the types are compatible for this cast"

  Scenario: Valid cast
    When I compile with codegen:
      '''
      fn test():
        val x: i32 = 42
        val y = x as i64  # OK: compatible types
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile with codegen:
      '''
      fn test():
        val x: ComplexType = get_value()
        val y = x as IncompatibleType
      '''
    Then I should see error E2007
    And the error message should contain "캐스트 실패"
